--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "buzzvel-frontend-challenge",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "engines": {
-    "node": ">=22.15.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.1",
-    "eslint": "^9.25.1",
-    "globals": "^16.0.0",
-    "prettier": "3.5.3",
-    "vite": "^6.3.1"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
-    "tailwindcss": "^4.1.5"
-  }
+	"name": "buzzvel-frontend-challenge",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"engines": {
+		"node": ">=22.15.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.25.1",
+		"eslint": "^9.25.1",
+		"globals": "^16.0.0",
+		"prettier": "3.5.3"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.5",
+		"lightningcss": "^1.29.3",
+		"tailwindcss": "^4.1.5",
+		"vite": "^6.3.4"
+	}
 }
