ref: improve docker compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,6 @@ services:
     build: 
         context: .
     ports:
-      - "4173:4173"
+      - "5173:5173"
+    volumes:
+      - ".:/usr/src/app"
