feat: all-in-one section base card content

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
 	"recommendations": [
 		"esbenp.prettier-vscode",
 		"dbaeumer.vscode-eslint",
-		"aaron-bond.better-comments"
+		"bradlc.vscode-tailwindcss"
 	]
 }
