--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
 	"engines": {
 		"node": ">=22.15.0"
 	},
+	"tailwindcss": {
+		"config": "./tailwind.config.js"
+	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.1",
 		"eslint": "^9.25.1",
 		"globals": "^16.0.0",
+		"postcss": "^8.5.3",
 		"prettier": "3.5.3"
 	},
 	"dependencies": {
