--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
 	"engines": {
 		"node": ">=22.15.0"
 	},
-	"tailwindcss": {
-		"config": "./tailwind.config.js"
-	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.1",
 		"eslint": "^9.25.1",
@@ -23,6 +20,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.5",
+		"embla-carousel": "^8.6.0",
 		"lightningcss": "^1.29.3",
 		"tailwindcss": "^4.1.5",
 		"vite": "^6.3.4"
