--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/vite": "^4.1.5",
 		"embla-carousel": "^8.6.0",
 		"lightningcss": "^1.29.3",
+		"motion": "^12.10.0",
 		"tailwindcss": "^4.1.5",
 		"vite": "^6.3.4"
 	}
